@@ -1,5 +1,7 @@
 0.07 - not yet released
  - Scrub all HTML by default
+ - Properly truncate HTML
+ - don't hide the rester password
 
 0.06 - Thu Jun 21 15:29:20 PDT 2007
  - move common functions into B::ME::TT2
